section 2-8 lines and tables

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <h1>Microsoft Store marketing guidelines</h1>
                     <h6>An evolving document for agencies, internal partners, marketers in Microsoft, and other partner organizations</h6>
                     <picture>
-                        <img src="assets/multiple-devices.jpg" alt="" srcset="">
+                        <img src="assets/multiple-devices.png" alt="" srcset="">
                     </picture>
                     <h6 class="small">Welcome to Microsoft Store</h6>
                     <p>For years, separate stores on Windows, Xbox, online, and in physical retail were confusing our visitors
@@ -560,11 +560,15 @@
                     <div class="row">
                         <h5>Microsoft Store is the channel through which our customers experience, interact, and build relations with Microsoft. It's where we empower every person and organization on the planet to achieve more.</h5>
                     </div>
-                    <h5>Each channel within Microsoft Store has a specific role and a message to our customers. </h5>
-                    <div class="table-three">
-                        <div class="titles">Channel</div>
-                        <div class="titles">Role</div>
-                        <div class="titles">Message</div>
+                    <div class="row">
+                        <h5>Each channel within Microsoft Store has a specific role and a message to our customers. </h5>
+                    </div>
+                    <div class="table-three row">
+                        <div class="tt-row">
+                            <div class="titles channel">Channel</div>
+                            <div class="titles role">Role</div>
+                            <div class="titles message">Message</div>
+                        </div>
                         <div class="tt-row">
                             <div class="channel">Windows</div>
                             <div class="role">The most efficient way to engage with customers on Windows, delivering experiences that are relevant to their current Windows 10 device. </div>
