--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     </div>
                     <div class="row">
     
-                        <h5>In 1975, Bill Gates and Paul Allen had a huge vision—a computer on every desk and in every home. At the heart of that vision was our mission of empowerment, the motivation to make technology accessible to everyone and help people from all walks of life create, prosper, and achieve.</h5>
+                        <h5 class="heavy">In 1975, Bill Gates and Paul Allen had a huge vision—a computer on every desk and in every home. At the heart of that vision was our mission of empowerment, the motivation to make technology accessible to everyone and help people from all walks of life create, prosper, and achieve.</h5>
                     </div>
 
 
@@ -271,10 +271,10 @@
                 <div class="wrapper">
                     <span class="badge blue">Our tribe</span>
                     <div class="row">
-                        <h4>We strive to reach people who share a mindset&#8211;people of action</h4>
+                        <h4>We strive to reach people who share a mindset &#8211; people of action</h4>
                     </div>
                     <div class="row">
-                        <h5>They're not ones to leave a good idea alone. They have the ambition to turn ideas into actions, accomplish more, or change their lives (or the world). They wear many hats, play many roles. They're the doers—the people who start things, big and small. Move the world forward. And inspire others to do the same. </h5>
+                        <h5 class="heavy">They're not ones to leave a good idea alone. They have the ambition to turn ideas into actions, accomplish more, or change their lives (or the world). They wear many hats, play many roles. They're the doers—the people who start things, big and small. Move the world forward. And inspire others to do the same. </h5>
                     </div>
                     <div class="overlay">
                         <div class="img-wrapper">
@@ -340,7 +340,7 @@
                         <h4>Anyone can achieve anything if they have the right tools</h4>
                     </div>
                     <div class="row">
-                        <h5>Our story is what guides the experiences we create</h5>
+                        <h5 class="heavy">Our story is what guides the experiences we create</h5>
                     </div>
                     <article class="row">
                         <p>Buying technology today often seems to be just about the technology itself, a purely aesthetic representation of the product, not really about what it's used for.  While this may drive the initial sale, we believe that technology ultimately exists to help people with what they’re up against and to empower them to achieve more.</p>
@@ -360,7 +360,7 @@
                     <div class="row">
                         <h4>Dicover everything that's possible with Microsoft</h4>
                     </div>
-                    <h5>
+                    <h5 class="heavy">
                         Our message is what we tell our customers to win their hearts and minds 
                     </h5>
                     <div class="row tall">
@@ -433,7 +433,7 @@
                         <h4>Empowering our customers to achieve more</h4>
                     </div>
                     <div class="row">
-                        <h5>We help people achieve goals--from fixed to fluid, from everyday to exceptional.<br> Here are a copule of examples of what achievement means for our customers.</h5>
+                        <h5>We help people achieve goals &#8211; from fixed to fluid, from everyday to exceptional.<br> Here are a copule of examples of what achievement means for our customers.</h5>
                     </div>
                     <div class="row">
                         <h5>From<span class="long-bow"></span>To</h5>
@@ -558,7 +558,7 @@
                         <h4>One Microsoft Store, many experiences</h4>
                     </div>
                     <div class="row">
-                        <h5>Microsoft Store is the channel through which our customers experience, interact, and build relations with Microsoft. It's where we empower every person and organization on the planet to achieve more.</h5>
+                        <h5 class="heavy">Microsoft Store is the channel through which our customers experience, interact, and build relations with Microsoft. It's where we empower every person and organization on the planet to achieve more.</h5>
                     </div>
                     <div class="row">
                         <h5>Each channel within Microsoft Store has a specific role and a message to our customers. </h5>
@@ -603,16 +603,27 @@
                     <div  class="row">
                        <h4>Our voice is human</h4>
                     </div>
-                    <h5>We talk like humans—with less head, more heart. </h5>
-                    <div class="thrids">
-                        <div class="title">Ready to lend a hand</div>
-                        <div class="content">We show people we're on their side. We anticipate their real needs and offer great information at just the right time. They're inspired to move forward. </div>
-                        <div class="title">Warm and relaxed</div>
-                        <div class="content">We write naturally. Less formal, more grounded in honest, everyday conversations, like talking to a friend. Occasionally, we're fun. (We know when to celebrate.)</div>
-                        <div class="title">Crisp and clear</div>
-                        <div class="content">We're to the point. We use short words. Short sentences. We write for scanning first, reading second. We lead with what's most important. And eliminate nonessentials. </div>
+                    <div class="row">
+                        <h5 class="heavy">We talk like humans—with less head, more heart. </h5>
                     </div>
-                    <div class="cta"><a href="#" class="cta glyph">See the messaging framework</a></div>
+                    <div class="row">
+                        <div class="thirds">
+                            <div class="title">Ready to lend a hand</div>
+                            <div class="content">We show people we're on their side. We anticipate their real needs and offer great information at just the right time. They're inspired to move forward. </div>
+                        </div>
+                        <div class="thirds">
+                            <div class="title">Warm and relaxed</div>
+                            <div class="content">We write naturally. Less formal, more grounded in honest, everyday conversations, like talking to a friend. Occasionally, we're fun. (We know when to celebrate.)</div>
+                        </div>
+                        <div class="thirds">
+                            <div class="title">Crisp and clear</div>
+                            <div class="content">We're to the point. We use short words. Short sentences. We write for scanning first, reading second. We lead with what's most important. And eliminate nonessentials. </div>
+                        </div>
+                    </div> 
+                    <div class="cta">
+                        <a href="#" >See the messaging framework</a>
+                    </div>
+
                 </div>
                 </div>
             </section>
