--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <div class="wrapper">
                     <span class="badge blue">Our tribe</span>
                     <div class="row">
-                        <h4>We strive to reach people who share a mindset &#8211; people of action</h4>
+                        <h4>We strive to reach people who share a mindset&#8211; people of action</h4>
                     </div>
                     <div class="row">
                         <h5 class="heavy">They're not ones to leave a good idea alone. They have the ambition to turn ideas into actions, accomplish more, or change their lives (or the world). They wear many hats, play many roles. They're the doers—the people who start things, big and small. Move the world forward. And inspire others to do the same. </h5>
@@ -433,7 +433,7 @@
                         <h4>Empowering our customers to achieve more</h4>
                     </div>
                     <div class="row">
-                        <h5>We help people achieve goals &#8211; from fixed to fluid, from everyday to exceptional.<br> Here are a copule of examples of what achievement means for our customers.</h5>
+                        <h5>We help people achieve goals&#8211; from fixed to fluid, from everyday to exceptional.<br> Here are a copule of examples of what achievement means for our customers.</h5>
                     </div>
                     <div class="row">
                         <h5>From<span class="long-bow"></span>To</h5>
@@ -633,11 +633,17 @@
                     <div class="row">
                         <h4>Introducing editorial system</h4>
                     </div>
-                    <h5>Traditionally retail has predominantly been a product medium. It was rather scripted and mechanical. It was all about distribution, and a deal.</h5>
-                    <h5> Our approach is much more subtle. It's much more sensual. It's about how products feel, and what they enable. As much as how they look. We want to imbue people with a sense of well-being, empowerment, and a sort of gentle joyfulness. It's about how we experience the products and what we accomplish with them.</h5>
-                    <h5>We are approaching Microsoft Store experiences as a magazine editor would. Editing a magazine is about really having a close connection to your audience and knowing how to reach them, how to excite them, how to inspire them. It's a conversation essentially with your readers. It's our new editorial system. </h5>
-                    <div class="mag">
-                        <h2>Treat it like a magazine</h2>
+                    <div class="row">
+                        <h5 class="heavy">Traditionally retail has predominantly been a product medium. It was rather scripted and mechanical. It was all about distribution, and a deal.</h5>
+                    </div>
+                    <div class="row">
+                        <h5 class="heavy"> Our approach is much more subtle. It's much more sensual. It's about how products feel, and what they enable. As much as how they look. We want to imbue people with a sense of well-being, empowerment, and a sort of gentle joyfulness. It's about how we experience the products and what we accomplish with them.</h5>
+                    </div>
+                    <div class="row">
+                        <h5 class="heavy">We are approaching Microsoft Store experiences as a magazine editor would. Editing a magazine is about really having a close connection to your audience and knowing how to reach them, how to excite them, how to inspire them. It's a conversation essentially with your readers. It's our new editorial system. </h5>
+                    </div>
+                    <div class="mag row">
+                        <h2 class="light">Treat it like a magazine</h2>
                         <div class="half">
                             <div class="title">Editorial style </div>
                             <div class="desc">Conversational, sensory, joyful</div>
