--- a/index.html
+++ b/index.html
@@ -642,15 +642,18 @@
                     <div class="row">
                         <h5 class="heavy">We are approaching Microsoft Store experiences as a magazine editor would. Editing a magazine is about really having a close connection to your audience and knowing how to reach them, how to excite them, how to inspire them. It's a conversation essentially with your readers. It's our new editorial system. </h5>
                     </div>
-                    <div class="mag row">
-                        <h2 class="light">Treat it like a magazine</h2>
-                        <div class="half">
-                            <div class="title">Editorial style </div>
-                            <div class="desc">Conversational, sensory, joyful</div>
-                        </div>
-                        <div class="half">
-                            <div class="title">Editorial approach</div>
-                            <div class="desc">Curation, storytelling</div>
+                    <div class="row">
+                        <div class="mag">
+                            <h2 class="light">Treat it like a magazine</h2>
+                            <div class="thirds">
+                                <div class="title">Editorial style </div>
+                                <div class="title">Editorial approach</div>
+                            </div>
+                            <div class="thirds">
+                                <div class="desc">Conversational, sensory, joyful</div>
+                                <div class="desc">Curation, storytelling</div>
+                                
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -661,17 +664,27 @@
                     <div class="row">
                         <h4>Editorial style is how Microsoft Store feels when experienced by our customers. It's reflected in our copy as much as visual experiences.</h4>
                     </div>
-                    <h5>To empower everyone, you need to start small and grow from there. Gamers, Creators, Learners, Businesses, and among them— female and Hispanic customers— are the groups of people of action we are looking to attract. </h5>
-                    <h5>Diverse and different, they are passionate, influential, millennially-minded and are open to new experiences. They are looking for new stories, new communities, and new things they can achieve. </h5>
-                    <div class="thirds">
-                        <div class="title">Conversational</div>
-                        <div class="desc">Create a dialogue between the reader and the writer that's down-to-earth, at times quirky and funny</div>
-                        <div class="title">Sensory</div>
-                        <div class="desc">Talk about how things feel and look and how we react to them as humans</div>
-                        <div class="title">Joyful</div>
-                        <div class="desc">Create a sense of well-being and empowerment</div>
+                    <div class="row">
+                        <h5 class="heavy">To empower everyone, you need to start small and grow from there. Gamers, Creators, Learners, Businesses, and among them— female and Hispanic customers— are the groups of people of action we are looking to attract. </h5>
                     </div>
-                    <div class="dos_donts">
+                    <div class="row">
+                        <h5 class="heavy">Diverse and different, they are passionate, influential, millennially-minded and are open to new experiences. They are looking for new stories, new communities, and new things they can achieve. </h5>
+                    </div>
+                    <div class="row">
+                        <div class="thirds">
+                            <div class="title">Conversational</div>
+                            <div class="desc">Create a dialogue between the reader and the writer that's down-to-earth, at times quirky and funny</div>
+                        </div>
+                        <div class="thirds">
+                            <div class="title">Sensory</div>
+                            <div class="desc">Talk about how things feel and look and how we react to them as humans</div>
+                        </div>
+                        <div class="thirds">
+                            <div class="title">Joyful</div>
+                            <div class="desc">Create a sense of well-being and empowerment</div>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="dos">
                             <p class="title">Do this</p>
                             <p>Editors, Editors' Picks</p>
