--- a/index.html
+++ b/index.html
@@ -687,29 +687,77 @@
                     <div class="row">
                         <div class="dos">
                             <p class="title">Do this</p>
-                            <p>Editors, Editors' Picks</p>
-                            <p>Just dropped
-                                    Games we love
-                                    What we are obsessed with this week
-                                    We are in love with these games </p>
-                            <p>Editor's Picks
-                                    New Discoveries
-                                    We are going crazy about these
-                                    </p>
-                            <p>Everyone is an artist with these apps
-                                    Michelangelo, Raphael, Donatello – you'll come darn close to making this list with these new apps</p>
-                            <p>Cutest animal books. While you were all over cats and dogs, we found a couple other adorable creatures. Alligators.</p>
-                            <p>It takes more than guts to change something. Luck. Inspiration. A handful of Microsoft tools. And a big community to help you out. </p>
                         </div>
                         <div class="donts">
                             <p class="title">Don't do this</p>
-                            <p>Staff, Staff Picks</p>
-                            <p>New PC Games</p>
-                            <p>Featured movies</p>
-                            <p>Apps for artists</p>
-                            <p>Animal tales, Monkeys, alligators, mice, and more.</p>
-                            <p>Through opportunity, creativity and Microsoft technology, Ariela and her team are playing their parts in creating change within their community.</p>
+                            
                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="dos"><p>Editors, Editors' Picks</p>
+
+                           </div>
+                        <div class="donts"><p>Staff, Staff Picks</p>
+                            </div>
+                    </div>
+                    <div class="row">
+                        <div class="dos">                            
+                            <p>
+                                Just dropped
+                            </p>
+                            <p>
+                                Games we love
+                            </p>
+                            <p>
+                                What we are obsessed with this week
+                            </p>
+                            <p>
+                                We are in love with these games
+                            </p>
+                        </div>
+                        <div class="donts"><p>New PC Games</p>
+                            </div>
+                    </div>
+                    <div class="row">
+                        <div class="dos"> 
+                            <p>Editor's Picks</p>
+                                <p>
+                                    New Discoveries
+                                </p>
+                                <p>
+                                    We are going crazy about these
+                                </p>
+                                
+                       </div>
+                        <div class="donts"><p>Featured movies</p>
+                            </div>
+                    </div>
+                    <div class="row">
+                        <div class="dos"> 
+                            <p>Everyone is an artist with these apps</p>
+                            <p>
+                                Michelangelo, Raphael, Donatello – you'll come darn close to making this list with these new apps
+                            </p>
+                       </div>
+                        <div class="donts"><p>Apps for artists</p>
+                            </div>
+                    </div>
+                    <div class="row">
+                        <div class="dos"> 
+                            <p>Cutest animal books. While you were all over cats and dogs, we found a couple other adorable creatures. Alligators.</p>
+                           </div>
+                        <div class="donts"><p>Animal tales, Monkeys, alligators, mice, and more.</p>
+                           </div>
+                    </div>
+                    <div class="row">
+                        <div class="dos"> 
+                            <p>It takes more than guts to change something.</p>
+                            <p>
+                                Luck. Inspiration. A handful of Microsoft tools.
+                            </p> 
+                            <p>And a big community to help you out. </p>
+                        </div>
+                        <div class="donts"> <p>Through opportunity, creativity and Microsoft technology, Ariela and her team are playing their parts in creating change within their community.</p></div>
                     </div>
                 </div>
             </section>
