images for seciton 4-3

--- a/index.html
+++ b/index.html
@@ -1069,31 +1069,104 @@
                 <div class="row">
                     <div class="thirds">
                         <p class="title">Always use the full name Microsoft Store</p>
-                        <p>Explore <title> at Microsoft Store.</p>
-                        <p>Get <title> at Microsoft Store.</p>
-                        <p>Rent <title> from Microsoft Store.</p>
-                        <p>Get <title> from Microsoft Store near you, online, on your Windows and Xbox.</p>
                     </div>
                     <div class="thirds">
                         <p class="title">Add context within a sentence</p>
-                        <p><Title> is out now for Windows 10 and Xbox One. Get it from Microsoft Store.</p>
-                        <p>Get <title> for Windows 10 from Microsoft Store.</p>
-                        <p>Get <title> for Xbox One from Microsoft Store.</p>
-                        <p>Get <title> from your local Microsoft Store.</p>
-                        <p>Our flagship Microsoft Store on Fifth Avenue invites you to join the Quantum Break launch party</p>
-                        <p>Explore flagship Microsoft Store in Sydney</p>
                     </div>
                     <div class="thirds">
                         <p class="title">Avoid name lock-ups whenever possible</p>
-                        <p class="dos title">Say:</p>
-                        <p>Microsoft Store on Xbox consoles</p>
-                        <p>Microsoft Store on Windows 10 PCs</p>
-                        <p class="donts title">Avoid:</p>
-                        <p>Microsoft Store on Xbox</p>
-                        <p>Microsoft Store on Windows</p>
                     </div>
                 </div>
-            
+                <div class="row">
+                    <div class="thirds"> 
+                        <p>
+                            Explore &lt;title&gt; at Microsoft Store.
+                        <br><br>
+                            Get &lt;title&gt; at Microsoft Store.
+                        <br><br>
+                            Rent &lt;title&gt; from Microsoft Store.
+                        <br><br>
+                            Get &lt;title&gt; from Microsoft Store near you, online, on your Windows and Xbox.
+                        </p>
+                    </div>
+                    <div class="thirds">
+                        <p>
+                            &lt;Title&gt; is out now for Windows 10 and Xbox One. Get it from Microsoft Store.
+                        </p>
+                        <p>
+                            Get &lt;title&gt; for Windows 10 from Microsoft Store.
+                        </p>
+                        <p>
+                            Get &lt;title&gt; for Xbox One from Microsoft Store.
+                        </p>
+                        <p>
+                            Get &lt;title&gt; from your local Microsoft Store.
+                        </p>
+                        <p>
+                            Our flagship Microsoft Store on Fifth Avenue invites you to join the Quantum Break launch party
+                        </p>
+                        <p>
+                            Explore flagship Microsoft Store in Sydney
+                        </p>
+
+                    </div>
+                    <div class="thirds">
+                        <p class="dos"><span class="title">Say:</span>
+                            <br>Microsoft Store on Xbox consoles
+                            <br>Microsoft Store on Windows 10 PCs</p>
+
+                        <p class="donts"><span class="title">Avoid:</span>
+                            <br>Microsoft Store on Xbox
+                            <br>Microsoft Store on Windows</p>
+
+                    </div>
+                </div>
+                <div class="row"></div>
+            <div class="row">
+                <div class="left">Local</div>
+                <div class="middle">Microsoft Store</div>
+                <div class="right"></div>
+            </div>
+            <div class="row">
+                <div class="left">Online</div>
+                <div class="middle">Microsoft Store</div>
+                <div class="right"></div>
+            </div>
+            <div class="row">
+                <div class="left"></div>
+                <div class="middle">Microsoft Store</div>
+                <div class="right">...app</div>
+            </div>
+            <div class="row">
+                <div class="left">Visit flagship</div>
+                <div class="middle">Microsoft Store</div>
+                <div class="right">...in New York City</div>
+            </div>
+            <div class="row">
+                <div class="left"></div>
+                <div class="middle">Microsoft Store</div>
+                <div class="right">...at XXX mall/space</div>
+            </div>
+            <div class="row">
+                <div class="left"></div>
+                <div class="middle"></div>
+                <div class="right">...on XXX street</div>
+            </div>
+            <div class="row">
+                <div class="left"></div>
+                <div class="middle"></div>
+                <div class="right">...near you</div>
+            </div>
+            <div class="row">
+                <div class="left"></div>
+                <div class="middle">Microsoft Store</div>
+                <div class="right">..on your Windows 10 PC</div>
+            </div>
+            <div class="row">
+                <div class="left"></div>
+                <div class="middle"></div>
+                <div class="right">...on Xbox consoles</div>
+            </div>
             
             </div>
 			</section>
@@ -1103,8 +1176,36 @@
 					<div  class="row">
                         <h4>Our logo</h4>
                     </div>
-					<div>
-                        <h5>The Microsoft logo is the only logo used in our communications. Microsoft Store logo lock-ups appear only in global advertising. Don't create logo lock-ups. Don't use the symbol on its own. </h5>
+					<div class="row">
+                        <h5>The Microsoft logo is the only logo used in our communications.<br>
+                             Microsoft Store logo lock-ups appear only in global advertising. <br>
+                             Don't create logo lock-ups. <br>
+                             Don't use the symbol on its own. </h5>
+                    </div>
+                    <div class="row">
+                        <div class="left"></div>
+                        <div class="middle"><img src="assets/ms-example-1.png" alt="Microsoft official logo"></div>
+                        <div class="right"></div>
+                    </div>
+                    <div class="row">
+                        <div class="half">
+                            <p>Minimum clear space</p>
+                            <img src="assets/min-space.png" alt="minimum space around Microsoft logo">
+                        </div>
+                        <div class="half">
+                            <p>Margin = Height of 1 symbol</p>
+                            <img src="assets/ms-margin.png" alt="margin is height of 1 symbol for Microsoft logo" >
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="half">
+                            <p>Margin = Height of 1.5 symbols</p>
+                            <img src="assets/ms-margin-1.5.png" alt="margin is height of 1.5 symbols for Microsoft logo">
+                        </div>
+                        <div class="half">
+                            <p>Margin = Height of 2 symbols</p>
+                            <img src="assets/margin-2x.png" alt="margin is height of 2 symbols for Microsoft logo">
+                        </div>
                     </div>
 				</div>
 			</section>
